Support JDK 23